# kate-chat

./: .dockerignore  .gitignore  API-DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENT_PROCESSING_IMPLEMENTATION.md  KateChat-API.postman_collection.json  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  ci-cleanup.yml  infrastructure.yml
api/: .env.example  .gitignore  .prettierrc  Dockerfile  customization.example.json  jest.config.js  jest.setup.js  katechat.sqlite  package-lock.json  package.json  tsconfig.json  typeorm-local-mssql.ts  typeorm-local-mysql.ts  typeorm-local-postgres.ts  typeorm-local.ts
api-rust/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  katechat.sqlite
api-rust/scripts/: validate-client-ops.cjs
api-rust/src/: config.rs  database.rs  main.rs  schema.rs  websocket.rs
api/src/: global-config.ts  index.ts  schema.graphql
backend/: .env.example  .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
backend-rust/: .env.example  Cargo.toml  Dockerfile  README.md
backend-rust/migrations/00000000000000_diesel_initial_setup/: up.sql
backend-rust/migrations/2025-06-13-000001_create_tables/: down.sql  up.sql
backend-rust/migrations/2025-06-17-140720_add-message-user-name/: down.sql  up.sql
backend-rust/migrations/2025-07-12-194526_add_user_role_and_settings/: down.sql  up.sql
backend-rust/src/: config.rs  database.rs  main.rs  schema.rs  websocket.rs
backend-rust/src/controllers/: auth.rs  files.rs
backend-rust/src/graphql/: context.rs  mod.rs  mutation.rs  query.rs  subscription.rs
backend-rust/src/middleware/: auth.rs
backend-rust/src/models/: chat.rs  message.rs  mod.rs  model.rs  user.rs
backend-rust/src/services/: ai.rs  chat.rs  mod.rs  openai.rs  pubsub.rs  s3.rs  yandex.rs
backend-rust/src/services/bedrock/: bedrock_service.rs  bedrock_service_costs.rs  mod.rs
backend-rust/src/services/bedrock/providers/: ai21.rs  amazon.rs  anthropic.rs  cohere.rs  meta.rs  mistral.rs  mod.rs
backend-rust/src/utils/: errors.rs  jwt.rs  logger.rs  mod.rs
backend/src/: index.ts  schema.graphql
client/: .dockerignore  .env.production  Dockerfile  customization.example.json  esbuild.dev.js  esbuild.dev.mjs  esbuild.prod.js  jest.config.js  microsoft-identity-association.json  package.json  postcss.config.cjs  tsconfig.json
client/src/: global-config.ts  index.html  index.scss  index.tsx  theme.ts
config/: init-localstack.py  init-s3.py  nginx.conf
db-migrations/: 1754294400000-init.ts  1756452209499-rag.ts  1756816484906-chunk-model-id.ts  common.ts  tsconfig.json
db-migrations/common/: migrate-chat-files.ts
db-migrations/mssql/: 1754294400000-init.ts  1756981891461-rag.ts  1757925029019-model-max-input-tokens.ts  1759411130571-chat-model-tools.ts  1759411426260-user-chats-count.ts  1760514860647-tune-messages.ts  1760634092635-index-linked-to-message.ts  1760709118110-chat-defaults.ts  1761569116703-add-microsoft-id.ts  1762005060368-model-features.ts  1762072467615-message-status.ts  1762702971468-chat-is_pinned.ts  1769772791411-chat-files.ts  1769980352730-model-custom-settings.ts  1770198259005-mcp-servers.ts  1770900267603-mcp-servers.ts  1770920595242-mcp-server-auth.ts  1771494109414-optimize-chat-settings.ts  1771592129087-optimize-user-settings.ts  1771609423122-cleanup-models.ts  1771698945715-chat-folders.ts  1772219935255-document-metadata.ts  1772793196007-mcp-access.ts  1772800000000-search.ts  1773263358743-update-model-provider.ts  1783600000000-chat-files-audio.ts
db-migrations/mysql/: 1760898850120-init.ts  1761117200442-chat-defaults.ts  1761569123713-add-microsoft-id.ts  1762005067404-model-features.ts  1762072482979-message-status.ts  1762702979295-chat-is_pinned.ts  1764851063272-embeddins-vector.ts  1769772799270-chat-files.ts  1769980360490-model-custom-settings.ts  1770198259005-mcp-servers.ts  1770898976986-mcp-server-auth.ts  1770920601000-mcp-server-auth.ts  1771494116164-optimize-chat-settings.ts  1771592135743-optimize-user-settings.ts  1771609423423-cleanup-models.ts  1771698952240-chat-folders.ts  1772219942960-document-metadata.ts  1772793209485-mcp-access.ts  1772800000000-search.ts  1773263359040-update-model-provider.ts  1783600000000-chat-files-audio.ts
db-migrations/postgres/: 1754294400000-init.ts  1756982436191-rag.ts  1757012213090-tune_types.ts  (+24 more)
docs/: domain-name-setup.md  mcp-oauth-setup.md  microsoft-oauth-setup.md  oauth-setup.md  ssl-setup.md
document-processor/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  requirements.txt
document-processor-python/: .gitignore  Dockerfile  README.md  requirements.txt
document-processor/app/: main.py  parser.py  text_splitter.py
document-processor/app/core/: config.py  global_app.py  util.py
document-processor/app/dependencies/: common.py
document-processor/app/services/: code_executor.py  document_processor.py  parser_worker.py  sqs_service.py
document-processor/data/train/: Вильгельм Райх. Психология масс и фашизм.htm
document-processor/scripts/: export_layout.py  export_tableformer.py  pdf_setup.sh
document-processor/src/: aws.rs  chunker.rs  config.rs  health.rs  logging.rs  main.rs  model.rs  parser.py  parser.rs  pdf.rs  processor.rs  redis_status.rs  s3.rs  sqs.rs  text_splitter.py
examples/: README.md
frontend/: .dockerignore  .env.example  .env.production  .eslintrc.json  .prettierrc  Dockerfile  esbuild.dev.js  esbuild.prod.js  jest.config.js  next.config.mjs  package-lock.json  package.json  serve.js  tsconfig.json
infrastructure/: COST_OPTIMIZATION.md  database.tf  ecs-services.tf  ecs.tf  load-balancer.tf  main.tf  networking.tf  outputs.tf  secrets.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  migration-create.sh  migration-generate.sh  migration-revert.sh  migration-run.sh  restart_ecs.sh
(+572 files in other folders)
