[package]
name = "kate-chat-backend"
version = "1.0.0"
edition = "2021"

[features]
default = ["sqlite", "postgres"]
sqlite = []
postgres = []
mysql = ["diesel/mysql"]

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "tracing"] }
async-graphql-rocket = "7.0"
async-graphql-warp = "7.0"

# Database
diesel = { version = "2.1", features = ["postgres", "sqlite", "uuid", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
diesel_migrations = "2.1"

# JSON/Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-bedrockruntime = "1.0"
aws-sdk-bedrock = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-costexplorer = "1.0"
aws-smithy-types = "1.0"
aws-smithy-runtime-api = "1.0"
aws-credential-types = "1.0"

# Base64
base64 = "0.22"

# Regular expressions
regex = "1.0"

# Async trait
async-trait = "0.1"

# CORS
rocket_cors = "0.6.0"

# WebSocket support for subscriptions
tokio-tungstenite = "0.21"
warp = "0.3"

# PubSub for subscriptions
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1.4"
url = "2.5"

# OAuth
oauth2 = "4.4"
urlencoding = "2.1"

# Session management (removed for Rocket 0.4 compatibility)

# Password hashing
argon2 = "0.5"

# Configuration
config = "0.14"

# File uploads
tempfile = "3.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"

